CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2004 by Bill Kendrick
bill@newbreedsoftware.com
http://www.newbreedsoftware.com/tuxpaint/


2004.December.11 (0.9.15)
  * Lockfile now cleared upon exit, allowing Tux Paint to be re-launched
    immediately.

  * Lithuanian updates.
    Gintaras Go?tautas <gintaras@nes.lt>

  * Hotspot for 'tiny' crosshair mouse pointer shape is now
    correct in 16x16 size.

  * Somewhat better treatment of wrong-sized images when loading them.
    It works well for typical kid drawings, as long as objects don't
    touch the edge of the screen. (the earth and sky -- and anything
    else at the edge -- get extended to fill the space) This could be
    better done with wavelets I think, or some vector-based notion of
    what lies at the edge of the screen. Starters, as usual, need work.
    Albert Cahalan <albert@users.sf.net>

  * Magic blur effect now gamma-aware, circular, and modifying all points
    within the brush instead of just 25% of them.
    Albert Cahalan <albert@users.sf.net>

  * fixed display corruption in load dialog when saved images are
    from a larger display size
    Albert Cahalan <albert@users.sf.net>

  * getpixel function now considers edges as extending to infinity
    Albert Cahalan <albert@users.sf.net>

  * New smudge tool!
    Albert Cahalan <albert@users.sf.net>

  * Magic blocks effect now gamma-aware and using all 16 (not just 4)
    source pixels.
    Albert Cahalan <albert@users.sf.net>

  * More range for stamp sizes. Can't hang off edge in both dimensions.
    Albert Cahalan <albert@users.sf.net>

  * Tinter now 2x to 4x faster.
    Albert Cahalan <albert@users.sf.net>

  * Sorry about that leak. Many MB per stamp and nobody complained???
    Albert Cahalan <albert@users.sf.net>

  * Greatly improved stamp outlining (to avoid empty rows or columns
    and other artifacts) by using a thick stippled pattern.
    Albert Cahalan <albert@users.sf.net>
