@@ -23,7 +23,7 @@ New Breed Software</p>
 <p><a href="mailto:bill@newbreedsoftware.com">bill@newbreedsoftware.com</a><br>
 <a href="http://www.newbreedsoftware.com/tuxpaint/">http://www.newbreedsoftware.com/tuxpaint/</a></p>
 
-<p>June 14, 2002 - October 24, 2004</p>
+<p>June 14, 2002 - December 11, 2004</p>
 </center>
 
 <hr size=2 noshade>
@@ -433,17 +433,11 @@ New Breed Software</p>
 	<dd>
 	  This makes the picture fuzzy wherever you drag the mouse.
 	</dd>
-
-	<dt><b>Blocks</b></dt>
+	  
+	<dt><b>Smudge</b></dt>
 	<dd>
-	  This makes the picture blocky looking ("pixelated") wherever
-	  you drag the mouse.
-	</dd>
-
-	<dt><b>Negative</b></dt>
-	<dd>
-	  This inverts the colors wherever you drag the mouse.
-	  (e.g., white becomes black, and vice versa.)
+	  This pushes the colors around under the mouse, like finger painting
+	  with wet paint.
 	</dd>
 
 	<dt><b>Fade</b></dt>
@@ -453,17 +447,25 @@ New Breed Software</p>
 	  white.)
 	</dd>
 	
+	<dt><b>Darken</b></dt>
+	<dd>
+	  This dakrens the colors wherever you drag the mouse.
+	  (Do it to the same spot many times, and it will eventually become
+	  black.)
+	</dd>
+
 	<dt><b>Chalk</b></dt>
 	<dd>
 	  This makes parts of the picture (where you move the mouse)
 	  look like a chalk drawing.
 	</dd>
 	
-	<dt><b>Drip</b></dt>
+	<dt><b>Blocks</b></dt>
 	<dd>
-	  This makes the paint "drip" wherever you move the mouse.
+	  This makes the picture blocky looking ("pixelated") wherever
+	  you drag the mouse.
 	</dd>
-	 
+
         <dt><b>Thick</b></dt>
 	<dd>
 	  This makes the darker colors in the picture become thicker
@@ -476,6 +478,28 @@ New Breed Software</p>
 	  (light colors become thicker).
 	</dd>
 	
+	<dt><b>Negative</b></dt>
+	<dd>
+	  This inverts the colors wherever you drag the mouse.
+	  (e.g., white becomes black, and vice versa.)
+	</dd>
+	
+	<dt><b>Tint</b></dt>
+	<dd>
+	  This changes the parts of the picture to the selected color.
+	</dd>
+	
+	<dt><b>Drip</b></dt>
+	<dd>
+	  This makes the paint "drip" wherever you move the mouse.
+	</dd>
+	
+	<dt><b>Cartoon</b></dt>
+	<dd>
+	  This makes the picture look like a cartoon &mdash; with thick
+	  outlines and solid colors &mdash; wherever you move the mouse.
+	</dd>
+	 
 	<dt><b>Fill</b></dt>
 	<dd>
 	  This floods the picture with a color.  It lets you quickly
